// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipientListForm defaults to create mode 1`] = `
<div>
  <Panel>
    <Panel.Section>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            label="Name"
            name="name"
            onChange={[Function]}
            placeholder="My favorite recipients"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
        <Grid.Column>
          <Field
            component={[Function]}
            helpText="A unique ID for your recipient list, we'll fill this for you but, once set, this can not be modified."
            label="Identifier"
            name="id"
            placeholder="my-favorite-recipients"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            fileType="csv"
            helpText={
              <span>
                You can download a 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Create
         Recipient List
      </Button>
    </Panel.Section>
  </Panel>
</div>
`;

exports[`RecipientListForm renders correctly in create mode 1`] = `
<div>
  <Panel>
    <Panel.Section>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            label="Name"
            name="name"
            onChange={[Function]}
            placeholder="My favorite recipients"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
        <Grid.Column>
          <Field
            component={[Function]}
            disabled={false}
            helpText="A unique ID for your recipient list, we'll fill this for you but, once set, this can not be modified."
            label="Identifier"
            name="id"
            placeholder="my-favorite-recipients"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            fileType="csv"
            helpText={
              <span>
                You can download a 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Create
         Recipient List
      </Button>
    </Panel.Section>
  </Panel>
</div>
`;

exports[`RecipientListForm should disable form elements during submit 1`] = `
<div>
  <Panel>
    <Panel.Section>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            disabled={true}
            label="Name"
            name="name"
            onChange={[Function]}
            placeholder="My favorite recipients"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
        <Grid.Column>
          <Field
            component={[Function]}
            disabled={true}
            helpText="A unique ID for your recipient list, we'll fill this for you but, once set, this can not be modified."
            label="Identifier"
            name="id"
            placeholder="my-favorite-recipients"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            disabled={true}
            label="Description"
            name="description"
            placeholder="All my favorite recipients"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
      <Grid
        className="Spacer"
      >
        <Grid.Column>
          <Field
            component={[Function]}
            disabled={true}
            fileType="csv"
            helpText={
              <span>
                You can download a 
                <DownloadLink
                  href="example-recipient-list.csv"
                >
                  CSV template here
                </DownloadLink>
                 to use when formatting your recipient list for upload.
              </span>
            }
            label="Upload a CSV file of recipients"
            name="csv"
            required={true}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </Grid.Column>
      </Grid>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Create
         Recipient List
      </Button>
    </Panel.Section>
  </Panel>
</div>
`;
